src/components/dialogs/insert-function-dialog/insert-function-dialog.module.css
.arguments-layout {

  display: grid;
  grid-template-rows: auto 1fr auto auto;
  grid-template-columns: 1fr;
  height: 100%;
  overflow: hidden;

  h1 {
    font-size: 16px;
    padding: 0;
    margin: 0 0 .5em 0;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
  }

  .description {
    padding-bottom: 1em;
    margin-bottom: 1em;
    border-bottom: 1px solid rgba(0, 0, 0, .3);
  }

  .arguments {
    overflow-y: scroll;

    & > .table {
      display: grid;
      grid-template-columns: auto 1fr auto;
      column-gap: 1em;
      row-gap: .5em;
      align-items: center;
      padding: 0 1em 0 0;
    }

  }

  .function-result {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: .5em;

    .calculated {
      overflow: hidden;
      white-space: nowrap;
      text-overflow: ellipsis;
      flex-grow: 1;
    }

  }

  .information, .function-result {
    min-height: 3em;
    margin-top: 1em;
    padding-top: 1em;
    border-top: 1px solid rgba(0, 0, 0, .3);
  }


}

.search-layout {
  overflow: hidden;
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: auto 1fr auto;
  height: 100%;
  width: 100%;
  flex-grow: 1;
  row-gap: 1em;
}

.results {

  overflow-y: scroll;
  /* height: 20em; */
  height: 100%;

  font-size: 13px;
  outline: none;
  border: 1px solid #ccc;

  list-style-type: none;
  margin: 0;
  padding: 0;
  flex-grow: 1;

  
  li {

    user-select: none;

    .name {
      font-weight: 600;
    }

    & > * {
      pointer-events: none;
    }

    padding: 1em .5em 1em 1em;

    &:hover {
      background-color: color-mix(in srgb, var(--dialog-border-color) 7%, transparent);
    }

  }

  li.selected {
    background-color: var(--dialog-border-color);
    color: var(--dialog-title-color);
  }

  li + li {
    border-top: 1px dotted #ccc;
  }

}

.buttons {
  display: flex;
  flex-direction: row;
  gap: .5em;
  width: 100%;
}

